# numdata

./: CMakeLists.txt  GNUmakefile  Makefile  README.md
.make/: numdata.mk
include/numdata/: numdata.h
src/: numdata.cpp
test/: demo.cpp
